Add the GenerateFeedV1 handle (#5)
Update README.md
Update mocks
